# project-management-graphql-actix

./: .env  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/config/: mod.rs  mongo.rs
src/handler/: graphql_handler.rs  mod.rs
src/schemas/: mod.rs  project_schema.rs
